--- a/FinalDataNarrative.Rmd
+++ b/FinalDataNarrative.Rmd
@@ -6,7 +6,176 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE, fig.align = 'center')
+```
+
+```{r}
+source(here::here("scripts", "functions.R"))
+source(here::here("scripts", "get_data.R"))
+```
+
+```{r}
+births_clean <-
+  births %>% 
+    slice(-c(2,4:55, 57:108, 110:161, 163:214, 216:267, 
+             269:320, 322:373, 375:427, 429:480, 482:533, 
+             535:586, 588:640, 643, 646:698, 700:751, 
+             753:805, 806:858, 860:911, 913:964, 966:1017, 
+             1019:1070, 1072:1176, 1178:1229, 
+             1231:1282, 1284:1391)) %>% 
+  select(-c('1980', '1981', '1982', '1983', '1984', '1985', '1986', '1987', '1988', '2020')) 
+
+births_wide <-
+  births_clean %>%
+  pivot_longer(!Years, names_to = "year", values_to = "children_born") %>% 
+  rename(Type = Years, Year = year, Births = children_born) %>% 
+  select(Year, Births, Type) %>% 
+  mutate(Year = as.numeric(Year)) %>%
+  arrange(Year) %>%
+  mutate(Type = str_replace(string = Type,
+                            pattern = "Less than 15",
+                            replacement = "15 and younger")) %>% 
+  mutate(Type = str_replace(string = Type,
+                            pattern = "\\(People\\)",
+                            replacement = "\\(Births)\\")) %>%
+  pivot_wider(names_from = Type, values_from = Births)
+
+
+
+births_long <- 
+  births_clean %>%
+  
+  pivot_longer(!Years, names_to = "year", values_to = "children_born") %>% 
+  rename(Type = Years, Year = year, Births = children_born) %>% 
+  select(Year, Births, Type) %>% 
+  mutate(Year = as.numeric(Year)) %>% 
+  arrange(Year) %>%
+  mutate(Type = str_remove_all(string = Type,
+                               pattern = "\\(People\\)")) %>% 
+  mutate(Type = str_replace(string = Type,
+                            pattern = "Births ",
+                            replacement = "Total births"
+                            )) %>% 
+  mutate(Type = str_replace(string = Type,
+                            pattern = "Less than 15",
+                            replacement = "15 and younger"))
+```
+
+As we take a look at the following graphs the aim is to discover a trend in birth rates based on the average life expectancy and ethnicity of mothers. Are there clear trends? Do the trends have anything to with each other? Or, are there other elements that could be affecting the trends that we see?
+
+
+# Total births per year
+
+
+First, we take a look at the birth rates for all women in the US. This shows a peak that occurs in 2007 and then a sharp decline in births afterwards. 
+
+```{r}
+birth_graph(total)
 ```
 
 
+# Change in birth rates based on the Mother's age
+
+Here we can see that the 35-39 year old age group has a clear increase in birth rates. It crosses paths with the 15-19 year old age group during the year 2000 and continues to increase as the 15-19 year old age group declines. The 20-24 year old age group also mimics the same steady decline that the 15-19 year old age group follows. There is also a uniform peak at all age levels during the year 2007.
+
+```{r}
+birth_graph(age)
+```
+
+
+# Life Expectancty and Ethnicity
+
+From this graph it is clear that life expectancy has risen over the years. This was expected as modern medicine has developed and become more wide spread (another study for another time). There is a significant difference between the life expectancies of White, Black and Hispanic women, with Hispanic women having the highest life expectancy and Black women having the lowest. 
+
+```{r}
+types_of_women <- c("All Women (Age)", "White Women (Age)", "Black Women (Age)", "Hispanic Women (Age)", "White non Hispanic Women (Age)", "Black non Hispanic Women (Age)")
+
+life_double <-
+  life_expect %>% 
+  select(-c('1980', '1981', '1982', '1983', '1984', '1985', '1986', '1987', '1988', '2020')) %>% 
+  slice(-c(26:33)) %>% 
+  filter(!Years %in% c('Men (Years)', 'By gender', 'By race and ethnicity')) %>% 
+  slice(-c(1, 3, 5, 7, 9, 11)) %>% 
+  mutate(Type_of_Women = types_of_women) %>% 
+  select(-Years)
+
+life_wide <- 
+  life_double  %>% 
+  pivot_longer(!Type_of_Women, names_to = "year", values_to = "life_expectancy") %>% 
+  rename(Year = year) %>% 
+  mutate(Year = as.numeric(Year)) %>% 
+  select(Year, life_expectancy, Type_of_Women) %>% 
+  arrange(Year) %>% 
+  pivot_wider(names_from = Type_of_Women, values_from = life_expectancy)
+
+life_long <- 
+  life_double  %>% 
+  pivot_longer(!Type_of_Women, names_to = "year", values_to = "life_expectancy") %>% 
+  rename(Year = year) %>% 
+  mutate(Year = as.numeric(Year)) %>% 
+  select(Year, life_expectancy, Type_of_Women) %>% 
+  arrange(Year) %>% 
+  mutate(Type_of_Women = str_remove_all(string = Type_of_Women,
+                               pattern = "\\(Age\\)"))
+```
+
+
+```{r}
+life_graph(race_and_ethnicity)
+```
+
+The following graph shows the same decrease in births after the year 2007 that the "Mother's Age" graph showed.
+
+```{r}
+birth_graph(ethnicity)
+```
+
+
+# Life Expectancty and Age
+
+Here we look at each individual trend by age group. The graph below show that there is a clear downward trend in the total births from mothers who are 29 years old or younger.
+
+```{r}
+births_life_joined <- 
+  births_wide %>% 
+  inner_join(life_wide, by = "Year")
+```
+
+```{r}
+births_life_joined %>% 
+  select(c('Year', contains(c('1', '2')), 'All Women (Age)')) %>% 
+  pivot_longer(!Year, names_to = "Type", values_to = "births_age") %>% 
+  ggplot(aes(x = Year, y = births_age, color = Type))+
+  ylab("Number of Births / Age of Mother")+         
+  geom_point()+
+  geom_smooth()+
+  ggtitle(str_c("Births", "from", "Younger", "Mothers", "compared", "to", "Avg", "Life", "Expectancy", sep = " "))+
+  theme(plot.title = element_text(hjust = 0.5))+
+  facet_grid( Type ~ ., scales = "free_y")+
+  theme_bw()+
+  theme(strip.text = element_blank())
+  
+  
+``` 
+
+This graph shows the opposite trend for mothers who are 30 years old or older.
+
+```{r}
+births_life_joined %>% 
+  select(c('Year', contains(c('30','35', '40', '45')), 'All Women (Age)')) %>% 
+  pivot_longer(!Year, names_to = "Type", values_to = "births_age") %>% 
+  ggplot(aes(x = Year, y = births_age, color = Type))+
+  ylab("Number of Births / Age of Mother")+  
+  geom_point()+
+  geom_smooth()+
+  ggtitle(str_c("Births", "from", "Older", "Mothers", "compared", "to", "Avg", "Life", "Expectancy", sep = " "))+
+  theme(plot.title = element_text(hjust = 0.5))+
+  facet_grid( Type ~ ., scales = "free_y")+
+  theme_bw()+
+  theme(strip.text = element_blank())
+```
+
+
+From analyzing this data, we can conclude that there is a general downward trend in births among US women. There is also a downward trend in births among younger mothers and a higher trend in births among older mothers. However, even with the life expectancy of women on the rise, this data does not prove why women are having children later in life due to longer lives. 
+
+Further analysis of the cost of living, education, healthcare, and net wealth could shed more light on the declining birth rates in the US.
